examples/test/testpolicy5024.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5024
  namespace: namespace366
spec:
  podSelector:
    matchLabels:
      key1: value41
      key24: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value0
          key9: value17
      podSelector:
        matchLabels:
          key45: value15
